...
                
                SideMenuView(showThis: $showSideMenu)
                    .frame(width: 300)
                    .offset(x: showSideMenu ? 0 : -300, y: 0)
                    .background(showSideMenu ? Color.white : Color.clear)
                    .alert("Error loading your user data. Please logout.", isPresented: $viewModel.isDisabled) {
                        Button("Logout") {
                            //print(viewModel.currentUser)
                            viewModel.signOut()
                        }
                    }
            }
        }
        
        .navigationTitle("Dashboard")
        .navigationBarTitleDisplayMode(.inline)
        .toolbar {
            ToolbarItem(placement: .navigationBarLeading) {
                Button {
                    withAnimation(.easeOut){
                        showSideMenu.toggle()
...
