...
    // MARK: BODY
    var body: some View {
        ZStack(alignment: .bottom){
            
            VStack(spacing: 0) {
                HStack{
                    Text("Your Checkups")
                        .padding()
                        .font(.headline)
                    
                    
                    Picker("Recent", selection: $showingOldestFirst) {
                        Text("Recent").tag(true)
...
