...
                        //authViewModel.signOut()
                    } label: {
                        SideMenuOptionRowView(viewModel: viewModel)
                    }
                    .alert(isPresented: $logoutAlert) {
                        Alert(
                            title: Text("Confirm Log Out"),
                            message: Text("Are you sure you want to Log Out?"), primaryButton: .destructive(Text("Logout"), action: {
                                authViewModel.signOut()
                            }), secondaryButton: .cancel())
                    }
                    
                } else {
...
